<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.test.armazenamento.VideoFragment"
    android:orientation="vertical"
    android:clipToPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/fab_margin"
        android:elevation="20dp"
        android:background="@android:color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_video"
            android:scaleType="centerCrop"/>

        <VideoView
            android:id="@+id/videoView"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:backgroundTint="@android:color/transparent"
            tools:targetApi="lollipop" />

    </RelativeLayout>

    <TextView
        android:id="@+id/videoPathTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:text="@string/no_file_selected"
        android:textAppearance="?android:textAppearanceMedium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/fab_margin"
        android:padding="0dp">

        <Button
            android:id="@+id/openVideoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/open"
            android:theme="@style/ButtonTheme" />

        <Button
            android:id="@+id/recordVideoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/capture"
            android:theme="@style/ButtonTheme" />

    </LinearLayout>

</LinearLayout>
